Добавил сортировку заявок на изменение мест практики от новых к старым